# neurencoding

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
docs/modules/: linear.rst  poisson.rst
docs/source/: conf.py  index.rst
docs/source/modules/: design.rst  linear.rst  poisson.rst
examples/: example_utils.py  modeling.py
neurencoding/: __init__.py  _models.py  design_matrix.py  linear.py  neural_model.py  poisson.py  utils.py
tests/: test_design.py  test_modeling.py
