[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "neurencoding"
version = "0.1.7"
authors = [
    {name="Berk Gercek", email="berkgercek@duck.com"},
]
description="Neural encoding models made easy. Describe neuronal activity as a function of other variables"
readme="README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "tqdm",
    "matplotlib",
    "seaborn",
    "numba",
]

[project.urls]
"Homepage" = "https://github.com/berkgercek/neurencoding"
"Bug Tracker" = "https://github.com/berkgercek/neurencoding/issues"

[tool.isort]
known_first_party = ["ibllib", "iblutil", "one", "brainbox"]
known_local_folder = ["neurencoding"]
import_heading_stdlib = "Standard library"
import_heading_thirdparty = "Third party libraries"
import_heading_firstparty = "IBL libraries"
import_heading_localfolder = "Neurencoding repo imports"
